--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,32 @@
 {% extends 'base2.html' %}
 
 {% block header %}
-    <i><b>{{ project_name }}</b></i>: {{ description }} {{ instructions | safe }}
+    <p><i><b>{{ project_name }}</b></i>: {{ description }} {{ instructions | safe }}</p>
+    <h1>TV Guide</h1>
+    <ul class="letters">
+        {% for letter in "ABCDEFGHIJKLMNOPQRSTUVWXYZ" %}
+            <li><a href="{{url_for("index_letter", letter=letter, page=0)}}">{{letter}}</a></li>
+        {% endfor %}
+    </ul>
+    <ul class="shows">
+        {% for show in shows %}
+            <li><a href="{{ url_for("view_show", show=show) }}">{{ show | unwiki }}</a></li>
+        {% endfor %}
+    </ul>
+
+    <ul class="pagination-links">
+    <li>{% if prev %}
+        <a href="{{prev}}">&lt;&lt; prev</a>
+    {% else %}
+        &lt;&lt; prev
+    {% endif %}</li>
+    <li>{% if next %}
+        <a href="{{next}}">next &gt;&gt;</a>
+    {% else %}
+        next &gt;&gt;
+    {% endif %}</li>
+    </ul>
+
 {% endblock %}
 
 {% block content %}
