Add google analytics

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html class="{% if fullscreen %}fullscreen{% endif %}">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X3T8G8RNNK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-X3T8G8RNNK');
+    </script>
     <title>{{ project_name }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
